--- a/arch/dot-config/waybar/style.css
+++ b/arch/dot-config/waybar/style.css
@@ -8,17 +8,18 @@
   background-color: #2e3440;
 }
 
+#window,
 #workspaces {
-  margin-left: 7px;
+  margin-left: 8px;
 }
 
 #workspaces button {
   all: initial;
   padding: 2px 6px;
-  margin-right: 3px;
+  margin-right: 4px;
 }
 
-#custom-dropbox,
+#custom-weather,
 #cpu,
 #power-profiles-daemon,
 #battery,
@@ -28,7 +29,7 @@
 #pulseaudio,
 #clock {
   min-width: 12px;
-  margin-right: 13px;
+  margin-right: 14px;
 }
 
 tooltip {
