feat: update fonts

--- a/arch/dot-config/wofi/style.css
+++ b/arch/dot-config/wofi/style.css
@@ -3,7 +3,7 @@
 @define-color	base  #2E3440;
 
 * {
-  font-family: 'CaskaydiaMono Nerd Font', monospace;
+  font-family: 'FiraCode Nerd Font Propo', monospace;
   font-size: 18px;
 }
 
