--- a/arch/dot-config/waybar/style.css
+++ b/arch/dot-config/waybar/style.css
@@ -2,7 +2,7 @@
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: CaskaydiaMono Nerd Font;
+  font-family: FiraCode Nerd Font Propo;
   font-size: 12px;
   color: #d8dee9;
   background-color: #2e3440;
